fix: dark mode text

--- a/darkMode.css
+++ b/darkMode.css
@@ -30,6 +30,7 @@ html,
 :is(url({)),
 .plurk a.ex_link,
 .plurk a.meta,
+._lc_ #plurk-dashboard #about_me a,
 :is(url(})) {
   color: #6ba5ff;
 }
@@ -56,7 +57,7 @@ html,
   border: 1px solid rgba(255, 255, 255, 0.12);
 }
 :is(url({)),
-.textarea_holder textarea,
+body .textarea_holder textarea,
 :is(url(})) {
   background-color: transparent;
   color: var(--plurk-text-color);
